--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <script src="map.js" type="module"></script>
 </head>
 <body>
+    <header>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
-    <div id="map">
-        <svg></svg>
-    </div>
-    
+    <label>
+        Filter by time:
+        <input type="range" id="time-slider" min="-1" max="1440" value="-1" />
+        <time id="selected-time"></time>
+        <em id="any-time">(any time)</em>
+    </label>
+    </header>
+
+  <div id="map">
+    <svg></svg>
+  </div>
 </body>
 </html>
